<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/topBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:background="@color/mainBackground">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_weight="0.4"
            android:gravity="left|fill"
            android:paddingLeft="10dp"
            android:text="@string/act_titulo"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ECF0F1"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:gravity="right"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ibInformacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="?attr/selectableItemBackground"
                android:minHeight="52dp"
                android:minWidth="52dp"
                android:src="@drawable/ic_info_outline_black_36dp" />

            <ImageButton
                android:id="@+id/ibCalendario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="?attr/selectableItemBackground"
                android:minHeight="52dp"
                android:minWidth="52dp"
                android:onClick="btAbrirActAvaliacao"
                android:src="@drawable/ic_date_range_black_36dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginBottom="60dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/ibMuitoSatisfeito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="?attr/selectableItemBackground"
                android:longClickable="true"
                android:minHeight="78dp"
                android:minWidth="78dp"
                android:padding="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/otimo"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tvOtimo"
                android:id="@+id/textView7"
                android:textColor="#3498DB"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/ibSatisfeito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp"
                android:background="?attr/selectableItemBackground"
                android:longClickable="true"
                android:minHeight="78dp"
                android:minWidth="78dp"
                android:padding="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/bom"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tvBom"
                android:id="@+id/textView8"
                android:textColor="#2ECC71"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/ibNeutro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp"
                android:background="?attr/selectableItemBackground"
                android:longClickable="true"
                android:minHeight="78dp"
                android:minWidth="78dp"
                android:padding="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/regular"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tvRegular"
                android:id="@+id/textView9"
                android:textColor="#F1C40F"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/ibInsatisfeito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp"
                android:background="?attr/selectableItemBackground"
                android:longClickable="true"
                android:minHeight="78dp"
                android:minWidth="78dp"
                android:padding="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/ruim"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tvRuim"
                android:id="@+id/textView10"
                android:textColor="#F39C12"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/ibMuitoInsatisfeito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="?attr/selectableItemBackground"
                android:longClickable="true"
                android:minHeight="78dp"
                android:minWidth="78dp"
                android:padding="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/pessimo"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tvPessimo"
                android:id="@+id/textView11"
                android:textColor="#E74C3C"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3498DB">

    </LinearLayout>
</LinearLayout>